[tool.poetry]
name = "classanalizer"
version = "0.1.0"
description = ""
authors = ["farbian_2005 <fabian_bernhart@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.3"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
