[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["fabianbernhart"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.17.1"
plotly = "^5.23.0"
dash-cytoscape = "^1.0.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
